Fix text box style collapse when using dark mode

--- a/src/sass/shadowRoot/_dialog.scss
+++ b/src/sass/shadowRoot/_dialog.scss
@@ -222,6 +222,8 @@
 			margin: 0;
 			border: none;
 			outline: none;
+			color: inherit;
+			background-color: inherit;
 		}
 
 		.chk-label {
